--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,29 @@
-.App {
-  text-align: center;
+*{
+  box-sizing: border-box;
+}
+.App{
+  margin: auto;
+  max-width: 1140px;
+}
+.uno-row{
+    display: flex;
+    flex-wrap: wrap;
+    background-color: #eee;
+    border: 1px solid #ddd;
+    margin-top: 10px;
+}
+.uno-profile{
+  /* max-width: 30%;
+  flex: 0 0 30%; */
+  padding:  2px 10px;
+}
+.uno-cover-img{
+  max-width: 80%;
+  flex: 0 0 80%;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
+/*----*/
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
 
-.App-link {
-  color: #61dafb;
-}
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
